Fix how we work spacing

--- a/src/components/block/HowWeWork.less
+++ b/src/components/block/HowWeWork.less
@@ -9,15 +9,7 @@
 
   > h2 {
     color: var(--base-title-color);
-    padding: var(--grid-gutter-small);
-  }
-
-  a.mail-info {
-    color: var(--base-title-color);
-
-    &:hover {
-      color: var(--base-font-color);
-    }
+    padding: 0 var(--grid-gutter-small);
   }
 
   .rotation-wrapper-outer {
@@ -118,7 +110,8 @@
   }
 
   .info-text {
-    padding: var(--grid-gutter-small);
+    padding: 0 var(--grid-gutter-small);
+    margin-bottom: var(--grid-gutter-large);
   }
 }
 
